SendGrid and Movie endpoints

--- a/.env
+++ b/.env
@@ -10,3 +10,6 @@ SQL_DATABASE=movieDB
 
 /* JWT PRIVATE KEY */
 SECRETPRIVATEKEY=JWT1234Pass
+
+/* SEND GRID KEY */
+SENDGRID_API_KEY=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
